# DocFill

./: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  test-template.docx
app/: globals.css  layout.tsx  page.tsx
app/api/convert-pdf/: route.ts
app/api/template-filler/: route.ts
app/components/: DocumentPreview.tsx  GeneratingView.tsx  InstructionsPanel.tsx  ResultView.tsx  SlotCard.tsx  ThoughtStream.tsx  UploadZone.tsx
lib/: types.ts
lib/agents/config/: constants.ts  models.ts
lib/agents/core/: slot-analyzer.ts  slot-filler.ts  smart-template-filler.code-workspace
lib/agents/prompts/: templates.ts
lib/agents/types/: state.ts
lib/agents/utils/: docx-xml.ts  logger.ts
lib/agents/workflows/: template-filler.ts
lib/hooks/: useTemplateFiller.ts
sdk/python/: pyproject.toml
sdk/python/docfill/: __init__.py  client.py
sdk/python/examples/: basic_usage.py
sdk/typescript/examples/: basic-usage.ts
sdk/typescript/src/: index.ts
