[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docfill"
version = "0.1.0"
description = "AI-powered DOCX template filler — Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "openai>=1.0.0",
]

[project.optional-dependencies]
remote = ["requests>=2.28.0"]
dev = ["pytest", "python-dotenv"]

[tool.setuptools.packages.find]
include = ["docfill*"]
